# MemoryManager-VM-OSPager

./: CMakeLists.txt  Makefile  README.md  SUBMIT  global.cpp  global.h  pager_internal.cpp  pager_internal.h  papers.txt  test_clock  tester.txt  vm_app.h  vm_arena.h  vm_pager.cpp  vm_pager.h
dysm/test_FB_alias_evict.dSYM/Contents/: Info.plist
dysm/test_FB_clean_eviction.dSYM/Contents/: Info.plist
tests/: debug.sh  debug_output.txt  run_all_tests.sh  runtests.sh  testOutputs  test_FB_alias_evict.4.cpp  test_FB_clean_eviction.4.cpp  test_FB_evict_reload.4.cpp  test_FB_file_read.4.cpp  test_FB_finvalid_filename_ptr.4.cpp  test_FB_multi_write.4.cpp  test_FB_multiple_mapping.4.cpp  test_FB_shared_cow_write.4.cpp  test_SB_RO_to_rw_fault.4.cpp  test_SB_cross_page_filename.4.cpp  test_SB_dirty_eviction.4.cpp  test_SB_eviction_reuse.4.cpp  test_SB_swap_evict_load.4.cpp  test_SB_swap_lifetime_fork.4.cpp  test_SB_write_read.4.cpp  test_children_exhaustive.4.cpp  test_clock.4.cpp  test_exhaustive.4.cpp  test_output.txt
tests/correct/: test_FB_alias_evict.4.correct  test_FB_clean_eviction.4.correct  test_FB_evict_reload.4.correct  test_FB_file_read.4.correct  test_FB_finvalid_filename_ptr.4.correct  test_FB_multi_write.4.correct  test_FB_multiple_mapping.4.correct  test_SB_RO_to_rw_fault.4.correct  test_SB_RO_to_rw_fault.4.mem.correct  test_SB_dirty_eviction.4.correct  test_SB_eviction_reuse.4.correct  test_SB_swap_evict_load.4.correct  test_SB_swap_lifetime_fork.4.correct  test_SB_write_read.4.correct  test_children_exhaustive.4.correct  test_clock.4.correct
(+46 files in other folders)
